--- a/calc/calc.css
+++ b/calc/calc.css
@@ -232,7 +232,7 @@ button {
     box-sizing: border-box;
   }
   .shead {
-    font-size: 3rem;
+    font-size: 2rem;
   }
   .container {
     width: 100%;
@@ -271,8 +271,7 @@ button {
     margin: 5px auto;
     display: block;
   }
-  .mhead,
-  .shead {
+  .mhead{
     font-size: 1.2rem;
     text-align: center;
   }
@@ -306,4 +305,5 @@ button {
   #stop { grid-column: 1; grid-row: 3; }
   #play { grid-column: 2; grid-row: 3; }
 }
+
 
